<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/newuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/enterotp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/enterotp"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/newuser"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_edit"
        android:drawablePadding="10dp"
        android:hint="@string/otp"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/resend_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/enterotp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/resendotp"
        android:textSize="14sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resend_otp"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/verify_otp"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:background="@drawable/buttons_border"
            android:backgroundTint="#3b5889"
            android:inputType="textPersonName"
            android:text="@string/verify"
            android:textSize="18sp" />

    </RelativeLayout>


</LinearLayout>
