<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/newuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/newuser"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/newuser"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/registerDetails"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <com.artifact.UXUtils.CircleImageView
                android:id="@+id/profil_pic"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_below="@+id/register_details"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:src="@mipmap/user" />

            <TextView
                android:id="@+id/profile_pic_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profil_pic"
                android:gravity="center_horizontal"
                android:text="@string/profile_img_txt"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edit"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/user_name_imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/user_name" />

                <EditText
                    android:id="@+id/name_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/name"
                    android:textColorHint="@android:color/darker_gray"
                    android:inputType="textPersonName"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" >
                    <requestFocus/>
                    </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edit"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/email_field_imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/email" />


                <EditText
                    android:id="@+id/email_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:imeOptions="actionNext"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:textColorHint="@android:color/darker_gray"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edit"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/mobile_field_imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/mobile" />

                <EditText
                    android:id="@+id/mobile_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/mobile"
                    android:textColorHint="@android:color/darker_gray"
                    android:inputType="phone"
                    android:imeOptions="actionNext"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_edit"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/password" />

                <EditText
                    android:id="@+id/password_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/phone_field"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:textColorHint="@android:color/darker_gray"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttons_border"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sign_up"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:gravity="center"
                    android:text="@string/signup"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <!--<TextView
                android:id="@+id/or_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_field"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/or"
                android:textColor="@android:color/white"
                android:textSize="12sp" />-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttons_border"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/fb_imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerInside"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:background="@color/fb"
                    android:src="@mipmap/fb" />

                <Button
                    android:id="@+id/sign_up_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="2dp"
                    android:background="@color/fb"
                    android:inputType="textPersonName"
                    android:paddingLeft="-30dp"
                    android:text="@string/sign_up_facebook"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttons_border_red"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/gplus_imageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:scaleType="centerInside"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/google" />

                <Button
                    android:id="@+id/sign_up_gplus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:inputType="textPersonName"
                    android:paddingLeft="-30dp"
                    android:text="@string/sign_up_g_plus"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/some_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:text="@string/terms_text"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
